@startuml US15_DM
hide methods
skinparam classAttributeIconSize 0

class Company {
  -designation
}

class CenterCoordinator {}

class Employee {
  -name
  -phoneNumber
  -email
  -password
  -address
  -citizenCardNumber
  -roleId
}

class VaccinationCenter{
  -name
  -emailAddress
  -phoneNumber
  -faxNumber
  -websiteAddress
  -openingHours
  -closingHours
}

class Address {
  -street
  -doorNumber
  -postalCode
  -city
}

class Slot {
  -slotDuration
  -maxVacPerSlot
}

class VaccineAdministration {
  -dose
  -lotNumber
  -date
}

class SNSUser {
  - citizenCard
  - snsNumber
  - name
  - birthDay
  - gender
  - phoneNumber
  - email
}

class Vaccine {
  -designation
  -id
  -brand
}

class VaccineType {
  -code 
  -description
  -technology
}

Company "1" -- "*" Employee : knows >
Company "1" -- "*" VaccinationCenter : knows >

Employee <|-- CenterCoordinator
Employee "*" -- "1" Address : has >

CenterCoordinator -- VaccinationCenter : has >

VaccinationCenter "1"-- "1" Slot : has >
VaccinationCenter "*" -- "1" Address : has >

Address "1" -- "*" SNSUser : has <

VaccineAdministration "*" -- "1" VaccinationCenter : has <
VaccineAdministration "1" -- "*" SNSUser : has >
VaccineAdministration "1" -- "1" Vaccine : has > 
Vaccine "*" -- "1" VaccineType : has <

@enduml